--- a/src/TaskTracker.CLI/TaskTracker.CLI.csproj
+++ b/src/TaskTracker.CLI/TaskTracker.CLI.csproj
@@ -4,6 +4,11 @@
     <ProjectReference Include="..\TaskTracker.Core\TaskTracker.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.2" />
+    <PackageReference Include="Spectre.Console.Cli" Version="0.49.1" />
+  </ItemGroup>
+
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
