--- a/src/TaskTracker.CLI/TaskTracker.CLI.csproj
+++ b/src/TaskTracker.CLI/TaskTracker.CLI.csproj
@@ -10,8 +10,13 @@
   </ItemGroup>
 
   <PropertyGroup>
+    <AssemblyName>ttracker</AssemblyName>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
+    <PublishSingleFile>true</PublishSingleFile>
+    <IncludeNativeLibrariesForSelfExtract>true</IncludeNativeLibrariesForSelfExtract>
+    <PublishReadyToRun>true</PublishReadyToRun>
+    <DebugType>embedded</DebugType>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
